test/functions/deitz/test_invalid_param_instantiate.good
test_invalid_param_instantiate.chpl:6: error: unresolved call 'foo(int(64))'
test_invalid_param_instantiate.chpl:1: note: candidates are: foo(param p: int = 4)
