test/functions/deitz/test_invalid_param_instantiate.chpl
proc foo(param p: int = 4) {
  writeln(p);
}

var x: int;
foo(x);
